# Yadro_2026_modulator

./: CMakeLists.txt  README.md  main.cpp
include/: demodulator.h  gaussian_noise.h  modulator.h  utils.h
plot_results/: plot.py
src/: demodulator.cpp  gaussian_noise.cpp  modulator.cpp
